--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "tink-skeleton-angular",
+  "name": "tink-anchor-scroll-angular",
   "version": "1.0.0",
   "main": [
-    "dist/tink-skeleton-angular.js"
+    "dist/tink-anchor-scroll-angular.js"
   ],
   "ignore": [
     ".*",
@@ -20,9 +20,7 @@
     "angular-sanitize": "~1.4.3",
     "angular-animate": "~1.4.3",
     "angular-touch": "~1.4.3",
-    "angular-route": "~1.4.3",
-    "jquery": "~2.1.3",
-    "tink-core": "latest"
+    "angular-route": "~1.4.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.3",
