--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.4.3",
-    "angular-scenario": "~1.4.3"
+    "angular-scenario": "~1.4.3",
+    "tink-core": "latest",
+    "tink-navigation-angular": "~1.2.0"
   }
 }
