--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tink-anchor-scroll-angular",
-  "description": "Tink anchor scroll Angular service",
+  "name": "tink-smooth-scroll-angular",
+  "description": "Tink smooth scroll Angular service",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:tinkkit/tink-anchor-scroll-angular.git"
+    "url": "git@github.com:tinkkit/tink-smooth-scroll-angular.git"
   },
   "dependencies": {
     "bower": "^1.3.12",
